--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>de.tuberlin.ise.benchfoundry</groupId>
 	<artifactId>BenchFoundry</artifactId>
 	<version>1.0-SNAPSHOT</version>
-    <name>BenchFoundry</name>
+	<name>BenchFoundry</name>
 	<packaging>jar</packaging>
 	<url>http://maven.apache.org</url>
 
@@ -25,16 +25,16 @@
 			<artifactId>mariadb-java-client</artifactId>
 			<version>1.2.0</version>
 		</dependency>
-		  <dependency>
-   			 <groupId>org.apache.logging.log4j</groupId>
-   			 <artifactId>log4j-api</artifactId>
-   			 <version>2.6.2</version>
-  		</dependency>
-  		<dependency>
-   			 <groupId>org.apache.logging.log4j</groupId>
-   			 <artifactId>log4j-core</artifactId>
-   			 <version>2.6.2</version>
-  		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.6.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.6.2</version>
+		</dependency>
 		<!-- http://mvnrepository.com/artifact/org.apache.thrift.tools/maven-thrift-plugin -->
 		<dependency>
 			<groupId>org.apache.thrift.tools</groupId>
@@ -47,12 +47,17 @@
 			<artifactId>libthrift</artifactId>
 			<version>0.9.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+			<version>1.48</version>
+		</dependency>
 	</dependencies>
 
 	<build>
-	    <!-- This is to handle errors related to "Plugin execution not covered by lifecycle configuration"
-	         See https://www.eclipse.org/m2e/documentation/m2e-execution-not-covered.html for details
-	    -->
+		<!-- This is to handle errors related to "Plugin execution not covered 
+			by lifecycle configuration" See https://www.eclipse.org/m2e/documentation/m2e-execution-not-covered.html 
+			for details -->
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -80,21 +85,21 @@
 						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
-				
-			<plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <configuration>
-        <archive>
-          <manifest>
-            <mainClass>de.tuberlin.ise.benchfoundry.Starter</mainClass>
-          </manifest>
-        </archive>
-        <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-        </descriptorRefs>
-      </configuration>
-    </plugin>
-			
+
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<configuration>
+						<archive>
+							<manifest>
+								<mainClass>de.tuberlin.ise.benchfoundry.Starter</mainClass>
+							</manifest>
+						</archive>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -170,7 +175,7 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
