fixed find/replace bug

--- a/benchfoundry_minitest.properties
+++ b/benchfoundry_minitest.properties
@@ -46,11 +46,11 @@ resultDir:results
 
 # factory class which will create a physical schema from the logical schema specified in the
 # schema input file. For non-relational databases this may involve schema denormalization.
-physicalSchemFactoryClass:de.tuberlin.ise.BenchFoundry.physicalschema.factory.RelationalPhysicalSchemaFactory
+physicalSchemFactoryClass:de.tuberlin.ise.benchfoundry.physicalschema.factory.RelationalPhysicalSchemaFactory
 
 # class which shall be used to connect to the SUT. Should correspond to the schema factory class above.
 #dbConnectorClass:de.tuberlin.ise.BenchFoundry.connectors.impl.DummyRelationalConnector
-dbConnectorClass:de.tuberlin.ise.BenchFoundry.connectors.impl.MariadbRelationalConnector
+dbConnectorClass:de.tuberlin.ise.benchfoundry.connectors.impl.MariadbRelationalConnector
 
 # BenchFoundry will issue a prepare command to the database connector before sending the execute command
 # at the poin in time specified in the trace. This property specifies the duration between prepare and
