--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<version>1.2.0</version>
+			<version>1.5.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -53,10 +53,10 @@
 			<version>1.48</version>
 		</dependency>
 		<dependency>
-    		<groupId>com.h2database</groupId>
-    		<artifactId>h2</artifactId>
-    		<version>1.4.193</version>
-		</dependency>
+      		<groupId>org.apache.derby</groupId>
+     		<artifactId>derby</artifactId>
+      		<version>10.8.3.0</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
