updated benchfoundry.properties - simply run the tracegenerator and copy all resulting files to the consbench folder

--- a/benchfoundry.properties
+++ b/benchfoundry.properties
@@ -7,36 +7,36 @@
 ##################################################################################################
 
 # location of the schema input file which should be a sequence of DDL statements
-schemaFilename:samples/tpc-c_schema
+schemaFilename:consbench/consbench_schema.txt
 
 # location of the file containing all the queries used in the respective trace
-oplistFilename:samples/oplist_example.txt
+oplistFilename:consbench/consbench_ops.txt
 
 # location of the file containing all parameters sets refered to in the trace files
-paramFilename:samples/paramlist_example.txt
+paramFilename:consbench/consbench_params.txt
 
 # location of the file containing all parameters sets refered to in the trace files
 # this file will often be empty but may be used to forward special instructions to db
 # connectors, e.g., for sending the request to a specific database replica. Use
 # custparamFilename:none
 # if you want to run BenchFoundry without a custom parameter list
-custparamFilename:samples/paramlist_example.txt
+custparamFilename:consbench/consbench_custparams.txt
 
 # location of the trace file which will preload the database with an initial data set
 # this trace may contain to entries. Use
 # preloadTraceFilename:none
 # if you want to run BenchFoundry without a preload trace
-preloadTraceFilename:samples/trace_example.txt
+preloadTraceFilename:consbench/consbench_preload_trace.txt
 
 # location of the trace file which will be used to warm up the SUT
 # this file should typically not be empty but should for reasons of reproducibility only
 # contain read requests as it will rarely be fully executed. Use
 # warmupTraceFilename:none
 # if you want to run BenchFoundry without a warmup trace
-warmupTraceFilename:samples/trace_example.txt
+warmupTraceFilename:consbench/consbench_warmup_trace.txt
 
 # location of the trace file of the actual experiment
-experimentTraceFilename:samples/trace_example.txt
+experimentTraceFilename:consbench/consbench_exp_trace.txt
 
 # location of the config file for the database connector
 dbConnectorConfigFile:mariadb.properties
@@ -66,7 +66,7 @@ processScheduleAheadTimeInMs:500
 # The file that contains information on all slave instances. Use
 # slaveFile:none
 # if the master shall be run as single node BenchFoundry instance
-slaveFile:slaves.properties
+slaveFile:none
 
 # If this flag is set to true, then BenchFoundry will print a detailed error trace for each business process with an
 # exception. If there are many exceptions, this may slow down the benchmark and cause scheduling delays.
