allowed usage of the SequentialScheduler (closed workload) for the experiment phase through a config parameter

--- a/benchfoundry_minitest.properties
+++ b/benchfoundry_minitest.properties
@@ -72,3 +72,13 @@ slaveFile:none
 # If this flag is set to true, then BenchFoundry will print a detailed error trace for each business process with an
 # exception. If there are many exceptions, this may slow down the benchmark and cause scheduling delays.
 doDetailledLoggingForExceptions:true
+
+#If this flag is set to true, then BenchFoundry will use a closed workload scheduler for the experiment phase.
+#Closed workload schedulers ignore all timing information from the trace and execute it as fast as possible
+#based on a fixed-size threadpool.
+closedWorkloadSchedulerInExperimentPhase:false
+
+#If a closed workload scheduler is used for the experiment phase, this parameter determines the threadpool size.
+#For the normal scheduler, this parameter is ignored.
+#Will default to 8 if negative values or zero are used.
+closedWorkloadSchedulerThreadpoolSize:8
